# bluez-dbus-cpp

./: CMakeLists.txt  README.md
example/: Agent1.h  CMakeLists.txt  SerialCharacteristic.h  example.cpp
example-ell-sockets/: CMakeLists.txt  EllSocket.h  SerialCharacteristic.h  example-ell.cpp
example-mesh/: CMakeLists.txt  ProvisionAgent.h  example.cpp
include/bluez/: Adapter1.h  GattCharacteristic1.h  GattService1.h  LEAdvertisement1.h  LEAdvertisingManager1.h  Util.h
include/bluez-dbus-cpp/: Adapter1.h  AgentManager1.h  Client.h  Device1.h  GattApplication1.h  GattCharacteristic1.h  GattCharacteristicBuilder.h  GattDescriptor1.h  GattManager1.h  GattService1.h  GenericCharacteristic.h  LEAdvertisement1.h  LEAdvertisingManager1.h  ReadOnlyCharacteristic.h  Socket.h  Util.h  bluez.h
include/bluez-dbus-cpp/adaptor/: Agent1_adaptor.h  GattCharacteristic1_adaptor.h  GattDescriptor1_adaptor.h  GattService1_adaptor.h  ObjectManagerExt_adaptor.h  PropertiesExt_adaptor.h
include/bluez-dbus-cpp/mesh/: Application1.h  Element1.h  Network1.h  ProvisionAgent1.h
include/bluez-dbus-cpp/mesh/adaptor/: Application1_adaptor.h  Element1_adaptor.h  ProvisionAgent1_adaptor.h
include/bluez-dbus-cpp/mesh/proxy/: Management1_proxy.h  Network1_proxy.h  Node1_proxy.h  ProvisionAgent1_proxy.h  Provisioner1_proxy.h
include/bluez-dbus-cpp/proxy/: Adapter1_proxy.h  AgentManager1_proxy.h  Device1_proxy.h  HealthManager1_proxy.h  Media1_proxy.h  NetworkServer1_proxy.h  ProfileManager1_proxy.h  SimAccess1_proxy.h
include/bluez-ext/: GattCharacteristicBuilder.h  ReadOnlyCharacteristic.h  bluez-ext.h
include/bluez/adaptor/: GattCharacteristic1_adaptor.h  GattDescriptor1_adaptor.h  GattService1_adaptor.h  PropertiesExt_adaptor.h
include/bluez/proxy/: HealthManager1_proxy.h  Media1_proxy.h  NetworkServer1_proxy.h  ProfileManager1_proxy.h  SimAccess1_proxy.h
interface/: Adapter1.xml  Agent1.xml  AgentManager1.xml  Application1.xml  Device1.xml  Element1.xml  GattCharacteristic1.xml  GattDescriptor1.xml  GattManager1.xml  GattService1.xml  HealthManager1.xml  LEAdvertisement1.xml  LEAdvertisingManager1.xml  Management1.xml  Media1.xml  Network1.xml  NetworkServer1.xml  Node1.xml  ObjectManager.xml  ProfileManager1.xml  ProvisionAgent1.xml  Provisioner1.xml  SimAccess1.xml  generate.sh
interface/mesh/: Application1.xml  Management1.xml  Network1.xml  Node1.xml  ProvisionAgent1.xml
pkgconfig/: bluez-dbus-cpp.pc.in
src/: GattCharacteristic1.cpp  GattDescriptor1.cpp  GattService1.cpp  Util.cpp
